# MDP-GRP13-2025

./: .gitignore  MDP-GRP13-2025.code-workspace  README.md
algorithm/: README.md  algo.py  consts.py  helper.py  main.py  requirements.txt  test_algo.py
algorithm/entities/: Entity.py  Robot.py
android/: README.md  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
rpi_cv/: README.md
rpi_cv/cv/: main.py  model_yolov8.py  requirements.txt
rpi_cv/rpi/: .gitignore  a_1_3.py  a_2.py  a_5.py  android.py  android_test.py  camera.py  image_rec.py  main.py  manual.py  movement_test.py  pc.py  pyproject.toml  rpi_main.py  stm.py  week_8.py  week_9.py
rpi_cv/rpi/config/: android_link.yaml  load_config.py  rpi.yaml  stm32_link.yaml
rpi_cv/rpi/helper/: logger.py  socket_utils.py
rpi_cv/rpi/link/: android_link.py  base.py  stm32_link.py
rpi_cv/rpi/message/: android.py
rpi_cv/rpi/model/: pi_action.py  rpi.py
rpi_cv/rpi/stm/: main.py  robot_controller.py  serial_cmd_base_ll.py
rpi_cv/rpi/tests/: conftest.py  test_android_message.py  test_android_to_algo_payload.py  test_config.py  test_links.py  test_logger.py
stm/: README.md
stm/STM32_Bare_Metal/: README.md
stm/STM32_Bare_Metal/STM32_MDP_Code/: .cproject  .project  STM32_MDP_Code.launch
stm/STM32_Component_Test/: README.md  Stm32_C30D.hex
stm/STM32_MDP_Code/: README.md
stm/STM32_MDP_Code/STM32_MDP_Code/: .cproject  .mxproject  (+2 more)
stm/STM32_PythonAbstractionAPI/: README.md  robot_controller.py  serial_cmd_base_ll.py
(+200 files in other folders)
