[project]
name = "rpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
  "pyserial>=3.5",
  "pyyaml>=6.0.2",
  "requests>=2.32.5",
  "pybluez @ git+https://github.com/pybluez/pybluez.git",
  "pydbus>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
