[project]
name = "rpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
  "pyserial>=3.5",
  "pyyaml>=6.0.2",
  "requests>=2.32.5",
  "pybluez @ git+https://github.com/pybluez/pybluez.git",
  "rpi-gpio==0.7.1; platform_system == 'Linux'",
  "python3-gpiozero>=2.0.1; platform_system == 'Linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
